# cooklang-chef

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  recipe.cook  test.cook
.github/workflows/: release.yml
.hooks/: pre-commit
cli/: Cargo.toml  README.md  build.rs  config.toml
cli/src/: config.rs  convert.rs  main.rs  units.rs
cli/src/recipe/: ast.rs  check.rs  image.rs  list.rs  mod.rs  read.rs
cli/src/serve/: async_index.rs  mod.rs
cli/src/shopping_list/: conf.rs  create.rs  mod.rs
cli/ui/: .eslintrc.cjs  package.json  pnpm-lock.yaml  svelte.config.js  uno.config.ts  vite.config.ts
cli/ui/src/: app.css
cli/ui/src/lib/: IngredientListItem.svelte  IngredientStepItem.svelte  Loader.svelte  Metadata.svelte  MetadataGroup.svelte  OpenInEditor.svelte  Quantity.svelte  colorScheme.ts  constants.ts  settings.ts  twemoji.ts  types.ts  useMediaQuery.ts  util.ts
cli/ui/src/lib/listbox/: Listbox.svelte  ListboxOptions.svelte
cli/ui/src/routes/: +layout.svelte  FolderCard.svelte  RecipeCard.svelte
cli/ui/src/routes/(narrow)/recipe/: +page.svelte  RegularStep.svelte  TextStep.svelte
cooklang/: Cargo.toml  README.md  units.toml
cooklang-fs/: Cargo.toml  README.md
cooklang-fs/src/: lib.rs  walker.rs
cooklang-to-cooklang/: Cargo.toml  README.md
cooklang-to-cooklang/src/: lib.rs
cooklang-to-human/: Cargo.toml  README.md
cooklang-to-human/src/: lib.rs  style.rs
cooklang-to-md/: Cargo.toml  README.md
cooklang-to-md/src/: lib.rs
cooklang/benches/: parse.rs  special_chars_lookup.rs  test_recipe.cook
cooklang/src/: ast.rs  context.rs  error.rs  helper.rs  lib.rs  located.rs  metadata.rs  model.rs  quantity.rs  scale.rs  span.rs
cooklang/src/aile/: mod.rs
cooklang/src/aisle/: grammar.pest  mod.rs
cooklang/src/analysis/: ast_walker.rs  mod.rs
cooklang/src/convert/: builder.rs  mod.rs  units_file.rs
cooklang/src/lexer/: cursor.rs  mod.rs
cooklang/src/parser/: ast.rs  grammar.pest  located.rs  metadata.rs  mod.rs  pairs_walker.rs  parser.rs  pest_ext.rs  quantity.rs  section.rs  step.rs  token_stream.rs
cooklang/src/parser2/: mod.rs  parser.rs  token_stream.rs
cooklang/src/shopping_list/: mod.rs
cooklang/tests/: aile.rs  aisle.rs  canonical.rs  canonical.yaml  serde.rs  shopping_list.rs
cooklang/units/: spanish.toml
docs/: README.md  cli.md  extensions.md  main.md  special_metadata.md  units_file.md  using_references.md
src/: args.rs  cmd.rs  collection.rs  config.rs  config_cmd.rs  convert.rs  edit.rs  generate_completions.rs  list.rs  main.rs  new.rs  recipe.rs  shopping_list.rs  units.rs  util.rs
src/cmd/: collection.rs  config.rs  convert.rs  list.rs  recipe.rs  shopping_list.rs  units.rs
src/cmd/serve/: async_index.rs  locale.rs  mod.rs
src/cmd/serve/handlers/: about.rs  convert_popover.rs  index.rs  mod.rs  open_editor.rs  recipe.rs  search.rs  sse_updates.rs  static_file.rs
src/recipe/: ast.rs  check.rs  debug.rs  list.rs  mod.rs  read.rs
src/serve/: async_index.rs  locale.rs  mod.rs
src/serve/handlers/: about.rs  convert_popover.rs  index.rs  mod.rs  open_editor.rs  recipe.rs  search.rs  sse_updates.rs  static_file.rs
src/shopping_list/: aisle.rs  conf.rs  create.rs  mod.rs
ui/: README.md  frontendMappings.js  input.css  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  uno.config.ts  vite.config.ts
ui/assets/: styles.css
ui/assets/fonts/: LICENSES
ui/assets/js/: about.js  critical-theme.js  hot-reload.js  main.js  recipe.js  timer.js
ui/i18n/: _template.json  check.py  de.json  en.json  es.json  fr.json  ru.json
ui/src/: app.css  app.d.ts  app.html
ui/src/lib/: Breadcrum.svelte  DisplayReport.svelte  Divider.svelte  IngredientListItem.svelte  IngredientStepItem.svelte  InlineIngredient.svelte  LangSelector.svelte  Metadata.svelte  OpenInEditor.svelte  Quantity.svelte  RegularStep.svelte  Section.svelte  Tag.svelte  TagLink.svelte  ThemeToggle.svelte  Timer.svelte  TimerClock.svelte  VideoEmbed.svelte  clickOutside.ts  colorScheme.ts  componentHighlight.ts  ingredientHighlight.ts  persistent.ts  scaleOutcomeTooltip.ts  search.ts  timer.ts  toast.ts  twemoji.ts  types.ts  ui_config.ts  updatesWS.ts  util.ts
ui/src/lib/i18n/: _template.json  check.py  de.json  en.json  es.json  index.ts  load.ts
ui/src/lib/listbox/: Listbox.svelte  ListboxOption.svelte  ListboxOptions.svelte
ui/src/routes/: +layout.svelte  +page.svelte  +page.ts  Card.svelte  FolderCard.svelte  RecipeCard.svelte
ui/src/routes/(narrow)/: +layout.svelte
ui/src/routes/(narrow)/about/: +page.svelte
ui/src/routes/(narrow)/recipe/: +page.svelte  +page.ts  RegularStep.svelte  Section.svelte  TextStep.svelte  ctx.ts
ui/src/routes/[[lang]]/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  RecipeCard.svelte
ui/src/routes/[[lang]]/(narrow)/about/: +page.svelte  de.svelte  en.svelte  es.svelte
ui/src/routes/[[lang]]/(narrow)/recipe/: +error.svelte  +page.svelte  +page.ts  RegularStep.svelte
ui/templates/: about.html  atoms.html  index.html  layout.html  recipe.html  search.html
ui/templates/components/: convert_popover.html  oob_toast.html  open_in_editor.html  recipe_grid.html  recipe_view.html  report.html  search_form.html
