[package]
name = "cooklang-chef"
version = "0.8.1"
edition = "2021"
authors = ["Zheoni <zheoni@outlook.es>"]
description = "CLI to manage cooklang recipes"
license = "MIT"
keywords = ["cooklang", "cooking", "recipes", "cli", "chef"]
categories = ["command-line-utilities", "parser-implementations"]
repository.workspace = true
readme = "README.md"
include = ["/src", "/Cargo.toml", "/README.md", "/ui/assets", "/ui/i18n", "/ui/templates"]

[[bin]]
path = "src/main.rs"
name = "chef"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tabular = { version = "0.2", features = ["ansi-cell"] }
serde_json = "1"
strum = { version = "0.25", features = ["derive"] }
toml = "0.8"
cooklang = { workspace = true }
cooklang-fs = { version = "0.13", path = "./cooklang-fs" }
cooklang-to-human = { version = "0.12", path = "./cooklang-to-human" }
cooklang-to-cooklang = { version = "0.12", path = "./cooklang-to-cooklang" }
cooklang-to-md = { version = "0.12", path = "./cooklang-to-md" }
textwrap = { workspace = true, features = ["terminal_size"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
camino = { version = "1", features = ["serde1"] }
once_cell = { workspace = true }
bitflags = { version = "2", features = ["std"] }
colorchoice-clap = "1.0"
anstream = "0.6"
owo-colors = { workspace = true }
directories = "5.0.1"
inquire = "0.6.2"
shell-words = "1.1"
enum-map = "2.7.3"
emojis = "0.6"
# Serve
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", features = ["util"], optional = true }
tower-http = { version = "0.5", features = ["fs", "trace"], optional = true }
notify = { version = "6.0", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
futures = { version = "0.3", optional = true }
rust-embed = { version = "8.0", features = ["compression", "include-exclude"], optional = true }
mime_guess = { version = "2.0", optional = true }
open = { version = "5.0", optional = true }
minijinja = { version = "1.0.10", features = ["loader", "urlencode", "json"], optional = true}
ansi-to-html = { version = "0.2.1", optional = true }
regex = { version = "1", optional = true }

[features]
default = ["serve"]
serve = [
    "dep:tokio",
    "dep:axum",
    "dep:notify",
    "dep:tokio-stream",
    "dep:futures",
    "dep:tower",
    "dep:tower-http",
    "dep:mime_guess",
    "dep:rust-embed",
    "dep:open",
    "dep:minijinja",
    "dep:ansi-to-html",
    "dep:regex"
]


[workspace]
members = ["cooklang-fs", "cooklang-to-cooklang", "cooklang-to-human", "cooklang-to-md"]

[workspace.package]
repository = "https://github.com/Zheoni/cooklang-chef"

[workspace.dependencies]
cooklang = "0.13"
owo-colors = "=3.5"
once_cell = "1.17"
textwrap = "0.16"

[profile.release]
lto = "thin"
strip = true
# opt-level = "s"
