[package]
name = "cooklang-cli"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tabular = { version = "0.2", features = ["ansi-cell"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
toml = "0.7"
cooklang = { path = "../cooklang" }
cooklang-fs = { path = "../cooklang-fs" }
textwrap = { version = "0.16", features = ["terminal_size"] }
humantime = "2.1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
concolor-clap = { version = "0.1", features = ["api"] }
concolor = "0.1"
yansi = "0.5"
serde = "1"
is-terminal = "0.4"
termtree = "0.4"
camino = "1"