[package]
name = "cooklang-chef"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
path = "src/main.rs"
name = "chef"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tabular = { version = "0.2", features = ["ansi-cell"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
toml = "0.7"
cooklang = { path = "../cooklang" }
cooklang-fs = { path = "../cooklang-fs" }
cooklang-to-human = { path = "../cooklang-to-human" }
cooklang-to-cooklang = { path = "../cooklang-to-cooklang" }
cooklang-to-md = { path = "../cooklang-to-md" }
textwrap = { version = "0.16", features = ["terminal_size"] }
humantime = "2.1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
concolor-clap = { version = "0.1", features = ["api"] }
concolor = "0.1"
yansi = "0.5"
serde = { version = "1", features = ["derive"] }
is-terminal = "0.4"
termtree = "0.4"
camino = { version = "1", features = ["serde1"] }
confy = "0.5"
once_cell = "1.17"