[package]
name = "cooklang-chef"
version = "0.2.0"
edition = "2021"
authors = ["Zheoni <zheoni@outlook.es>"]
description = "CLI to manage cooklang recipes"
license = "MIT"
keywords = ["cooklang", "cooking", "recipes", "cli", "chef"]
categories = ["command-line-utilities", "parser-implementations"]
repository = "https://github.com/Zheoni/cooklang-rs"
readme = "README.md"
include = [
    "/src",
    "/Cargo.toml",
    "/README.md",
    "/ui/build",
]

[[bin]]
path = "src/main.rs"
name = "chef"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tabular = { version = "0.2", features = ["ansi-cell"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
toml = "0.7"
cooklang = { version = "0.2", path = "../cooklang" }
cooklang-fs = { version = "0.2", path = "../cooklang-fs" }
cooklang-to-human = { version = "0.2", path = "../cooklang-to-human" }
cooklang-to-cooklang = { version = "0.2", path = "../cooklang-to-cooklang" }
cooklang-to-md = { version = "0.2", path = "../cooklang-to-md" }
textwrap = { version = "0.16", features = ["terminal_size"] }
humantime = "2.1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
concolor-clap = { version = "0.1", features = ["api"] }
concolor = "0.1"
yansi = "0.5"
serde = { version = "1", features = ["derive"] }
is-terminal = "0.4"
camino = { version = "1", features = ["serde1"] }
confy = "0.5"
once_cell = "1.17"
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.6", features = ["ws"], optional = true }
tower = { version = "0.4", features = ["util"], optional = true }
tower-http = { version = "0.4", features = ["fs", "trace", "cors"], optional = true }
notify = { version = "5.1", optional = true }
debounced = { version = "0.1", optional = true }
tokio-stream = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
rust-embed = { version = "6.6", features = ["compression"], optional = true }
mime_guess = { version = "2.0", optional = true }
shell-words = { version = "1.1", optional = true }
open = { version = "4.1", optional = true }


[features]
default = ["ui"]
ui = ["serve", "dep:mime_guess", "dep:rust-embed", "dep:open"]
serve = ["dep:tokio", "dep:axum", "dep:notify", "dep:debounced", "dep:tokio-stream", "dep:futures", "dep:tower", "dep:tower-http", "dep:shell-words"]
