[package]
name = "cooklang-fs"
version = "0.5.0"
edition = "2021"
authors = ["Zheoni <zheoni@outlook.es>"]
description = "Utilities for cooklang recipes in a file system"
license = "MIT"
keywords = ["cooklang"]
categories = []
repository.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = { version = "1", features = ["serde1"] }
cooklang = { workspace = true }
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
