[package]
name = "cooklang-to-cooklang"
version = "0.1.0"
edition = "2021"
authors = ["Zheoni <zheoni@outlook.es>"]
description = "Format cooklang back to cooklang"
license = "MIT"
keywords = ["cooklang"]
categories = ["value-formatting"]
repository = "https://github.com/Zheoni/cooklang-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cooklang = { version ="0.1.0", path = "../cooklang" }
textwrap = { version = "0.16", features = ["terminal_size"] }
