[package]
name = "cooklang-to-cooklang"
version = "0.12.0"
edition = "2021"
authors = ["Zheoni <zheoni@outlook.es>"]
description = "Format cooklang back to cooklang"
license = "MIT"
keywords = ["cooklang"]
categories = ["value-formatting"]
repository.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cooklang = { workspace = true }
textwrap = { workspace = true, features = ["terminal_size"] }
regex = "1"
