[package]
name = "cooklang-to-human"
version = "0.7.0"
edition = "2021"
authors = ["Zheoni <zheoni@outlook.es>"]
description = "Format cooklang in a human friendly way"
license = "MIT"
keywords = ["cooklang"]
categories = ["value-formatting"]
repository.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cooklang = { workspace = true }
textwrap = { workspace = true, features = ["terminal_size"] }
tabular = { version = "0.2", features = ["ansi-cell"] }
humantime = "2.1"
once_cell = { workspace = true }
owo-colors = { workspace = true }
anstyle = "1"
anstyle-owo-colors = "1.0"
