[package]
name = "cooklang-to-md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cooklang = { path = "../cooklang" }
textwrap = { version = "0.16", features = ["terminal_size"] }
serde_yaml = "0.9"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
once_cell = "1.17"
