[package]
name = "cooklang-to-md"
version = "0.3.0"
edition = "2021"
authors = ["Zheoni <zheoni@outlook.es>"]
description = "Format cooklang to markdown"
license = "MIT"
keywords = ["cooklang"]
categories = ["value-formatting"]
repository = "https://github.com/Zheoni/cooklang-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cooklang = { version = "0.3" }
textwrap = { version = "0.16", features = ["terminal_size"] }
serde_yaml = "0.9"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
once_cell = "1.17"
