[package]
name = "cooklang-to-md"
version = "0.5.0"
edition = "2021"
authors = ["Zheoni <zheoni@outlook.es>"]
description = "Format cooklang to markdown"
license = "MIT"
keywords = ["cooklang"]
categories = ["value-formatting"]
repository.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cooklang = { workspace = true }
textwrap = { workspace = true, features = ["terminal_size"] }
serde_yaml = "0.9"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
once_cell = { workspace = true }
