[package]
name = "cooklang"
version = "0.1.0"
edition = "2021"
authors = ["Zheoni <zheoni@outlook.es>"]


[dependencies]
bitflags = { version = "2", features = ["serde"] }
regex = "1.7"
serde = { version = "1", features = ["derive", "rc"] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
url = { version = "2.3", features = ["serde"] }
pest = "2.5"
pest_derive = "2.5"
indexmap = { version = "1.9", features = ["serde"] }
emojis = "0.5"
toml = "0.7"
once_cell = "1.17"
enum-map = { version = "2.4", features = ["serde"] }
humantime = "2"
tracing = "0.1"
# TODO change to regular dependency when ariadne updates concolor
ariadne = { git = "https://github.com/Zheoni/ariadne", branch = "update-concolor", features = ["concolor"] }
# ariadne = { version = "0.2", features = ["concolor"] }
either = "1.8"
finl_unicode = { version = "1.2", features = ["categories"], default-features = false }

[dev-dependencies]
yaml-rust = "0.4"
serde_json = "1"
criterion = "0.4"

[[bench]]
name = "special_chars_lookup"
harness = false

[features]
default = ["bundled_units"]
bundled_units = []
